{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 286,
  "lineage": "52cbc08f-a2b3-16fa-9fde-df32c682db4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d081196e3df05f4d",
            "arn": "arn:aws:ec2:us-west-2:577638368309:instance/i-0a8e26c1d4223546f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8e26c1d4223546f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0500a3e1744ad1cbb",
            "private_dns": "ip-10-0-1-77.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-35-93-140-55.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.140.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0543d6657eed630e0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0361e4de3adc07c56",
            "tags": {
              "Name": "nginx-Host"
            },
            "tags_all": {
              "Name": "nginx-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cec1a6d40ef468ed"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx",
            "aws_subnet.vpc_1_pub_subnet",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc_1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d081196e3df05f4d",
            "arn": "arn:aws:ec2:us-west-2:577638368309:instance/i-0a7778eac4228837c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7778eac4228837c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0866b64c98e36558f",
            "private_dns": "ip-10-0-2-23.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0640856a9977b7805",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0615eee3b7b673872",
            "tags": {
              "Name": "VPC-1-Private-Instance-Mongo-Host"
            },
            "tags_all": {
              "Name": "VPC-1-Private-Instance-Mongo-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4d005f495a62ca9"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx",
            "aws_security_group.private",
            "aws_subnet.vpc_1_private",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc_2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d081196e3df05f4d",
            "arn": "arn:aws:ec2:us-west-2:577638368309:instance/i-08259c43d0eac21dd",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08259c43d0eac21dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7a047b72b3f78ba",
            "private_dns": "ip-172-16-1-91.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01d0f8a0c8c0038ff",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054404eb69492d4b2",
            "tags": {
              "Name": "VPC-2-Private-Instance-Mongo"
            },
            "tags_all": {
              "Name": "VPC-2-Private-Instance-Mongo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b46b3c29149eea9"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx",
            "aws_security_group.vpc_2_private",
            "aws_subnet.vpc_2_private",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:internet-gateway/igw-027ad511b1d15ab05",
            "id": "igw-027ad511b1d15ab05",
            "owner_id": "577638368309",
            "tags": {
              "Name": "VPC-1-IGW"
            },
            "tags_all": {
              "Name": "VPC-1-IGW"
            },
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:route-table/rtb-08a39868c1ea92547",
            "id": "rtb-08a39868c1ea92547",
            "owner_id": "577638368309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0acfe76a3c95b78d7"
              }
            ],
            "tags": {
              "Name": "VPC-1-Private-RT"
            },
            "tags_all": {
              "Name": "VPC-1-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_1_to_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:route-table/rtb-0a1dd6f06e259974e",
            "id": "rtb-0a1dd6f06e259974e",
            "owner_id": "577638368309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027ad511b1d15ab05",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0acfe76a3c95b78d7"
              }
            ],
            "tags": {
              "Name": "VPC-1-Public-RT"
            },
            "tags_all": {
              "Name": "VPC-1-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_1_igw",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_1_to_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:route-table/rtb-0297ce006bec66aa9",
            "id": "rtb-0297ce006bec66aa9",
            "owner_id": "577638368309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0acfe76a3c95b78d7"
              }
            ],
            "tags": {
              "Name": "VPC-2-Private-RT"
            },
            "tags_all": {
              "Name": "VPC-2-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0655a1e8e85ffae1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_1_to_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e8e56a344dd6acd",
            "route_table_id": "rtb-08a39868c1ea92547",
            "subnet_id": "subnet-0615eee3b7b673872"
          },
          "dependencies": [
            "aws_route_table.vpc_1_private",
            "aws_subnet.vpc_1_private",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_1_to_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030c358be02053594",
            "route_table_id": "rtb-0a1dd6f06e259974e",
            "subnet_id": "subnet-0361e4de3adc07c56"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_1_igw",
            "aws_route_table.vpc_1_public",
            "aws_subnet.vpc_1_pub_subnet",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_1_to_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04becf3de306ed225",
            "route_table_id": "rtb-0297ce006bec66aa9",
            "subnet_id": "subnet-054404eb69492d4b2"
          },
          "dependencies": [
            "aws_route_table.vpc_2_private",
            "aws_subnet.vpc_2_private",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2",
            "aws_vpc_peering_connection.vpc_1_to_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:security-group/sg-0cec1a6d40ef468ed",
            "description": "Security group for nginx host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cec1a6d40ef468ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "577638368309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-SG"
            },
            "tags_all": {
              "Name": "nginx-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:security-group/sg-0b4d005f495a62ca9",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4d005f495a62ca9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cec1a6d40ef468ed"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "577638368309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-SG"
            },
            "tags_all": {
              "Name": "Private-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:security-group/sg-05b46b3c29149eea9",
            "description": "Security group for VPC 2 private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b46b3c29149eea9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cec1a6d40ef468ed"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-2-private-sg",
            "name_prefix": "",
            "owner_id": "577638368309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-2-Private-SG"
            },
            "tags_all": {
              "Name": "VPC-2-Private-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0655a1e8e85ffae1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx",
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:subnet/subnet-0615eee3b7b673872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0615eee3b7b673872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638368309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-1-Private-Subnet"
            },
            "tags_all": {
              "Name": "VPC-1-Private-Subnet"
            },
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_1_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:subnet/subnet-0361e4de3adc07c56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0361e4de3adc07c56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638368309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-1-Public-Subnet"
            },
            "tags_all": {
              "Name": "VPC-1-Public-Subnet"
            },
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:subnet/subnet-054404eb69492d4b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054404eb69492d4b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638368309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-2-Private-Subnet"
            },
            "tags_all": {
              "Name": "VPC-2-Private-Subnet"
            },
            "vpc_id": "vpc-0655a1e8e85ffae1f"
          },
          "dependencies": [
            "aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:vpc/vpc-0633fddc5db285dc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05514af47b2657786",
            "default_route_table_id": "rtb-076f7816b4e25b321",
            "default_security_group_id": "sg-0ab2971a4cc41330e",
            "dhcp_options_id": "dopt-0c098a489d0e40956",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0633fddc5db285dc5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076f7816b4e25b321",
            "owner_id": "577638368309",
            "tags": {
              "Name": "VPC-1"
            },
            "tags_all": {
              "Name": "VPC-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577638368309:vpc/vpc-0655a1e8e85ffae1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-04d4475f4885daba6",
            "default_route_table_id": "rtb-044141fa310f08b2f",
            "default_security_group_id": "sg-0d9117ac232bcf6e9",
            "dhcp_options_id": "dopt-0c098a489d0e40956",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0655a1e8e85ffae1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044141fa310f08b2f",
            "owner_id": "577638368309",
            "tags": {
              "Name": "VPC-2"
            },
            "tags_all": {
              "Name": "VPC-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_1_to_vpc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0acfe76a3c95b78d7",
            "peer_owner_id": "577638368309",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0655a1e8e85ffae1f",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between VPC-1 and VPC-2"
            },
            "tags_all": {
              "Name": "VPC Peering between VPC-1 and VPC-2"
            },
            "vpc_id": "vpc-0633fddc5db285dc5"
          },
          "dependencies": [
            "aws_vpc.vpc_1",
            "aws_vpc.vpc_2"
          ]
        }
      ]
    }
  ]
}